--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-
+<!DOCTYPE html>
+<html lang="tr">
+  <head>
+    <meta charset ="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>Mehmed 123'ün Video Oynatıcısı</title>
+  </head>
+  <body>
+    <section>
+      <div class="container">
+        <div id="video_player">
+          <vide src="" id="main-video"></video>
+          <div class="progressAreaTime"></div>
+          <div class="controls">
+            <div class="progress-area">
+              <div class="progress-bar">
+                <span></span>
+        </div>
+      </div>
+   <div class="controls-left">
+     <span class=="icon">
+       <i class="material-symbols-outlined">replay_10</i>
+       <span class=="icon">
+         <span class="material-symbols-outlined">play_arrow</span>
+         <span class=="icon">
+           <span class="material-symbols-outlined">forward_10</span>
+            <span class=="icon">
+           <span class="material-symbols-outlined">volume_up</span>
+       <input type="range" min="0" max="100" id="volume_range">
+              </div>
+            <div class="controls-right">
+     <span class=="icon">
+       <i class="material-symbols-outlined"></i>
+       <span class=="icon">
+         <i class="material-symbols-outlined">play_arrow</span>
+          <span class=="icon">
+         <i class="material-symbols-outlined">picture_in_picture_alt</span>
+         <span class=="icon">
+           <i class="material-symbols-outlined">settings</span>
+         <span class=="icon">
+           <i class="material-symbols-outlined">fullscreen</i>
+         </span>
+              </div>
+          </div>
+        </div>
+       <div class="settings">
+         <div class="playback">
+           <span>playback speed</span>
+           <ul>
+             <li data-speed="0.25">Çok yavaş</li>
+             <li data-speed="0.5">0.5</li>
+             <li data-speed="0.75">0.75</li>
+             <li data-speed="1">Normal</li>
+             <li data-speed="1.25">1.25</li>
+             <li data-speed="1.5">1.5</li>
+              <li data-speed="1.75">1.5</li>
+             <li data-speed="2">Çok hızlı</li>
+             </ul>
+        </div>
+    </section>
+  </body>
+</html>
+  
+    
