--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
    <div class="controls-left">
      <span class=="icon">
        <i class="material-symbols-outlined">replay_10</i>
+     </span>
        <span class=="icon">
-         <span class="material-symbols-outlined">play_arrow</span>
+         <i class="material-symbols-outlined">play_arrow</i>
+         </span
          <span class=="icon">
-           <span class="material-symbols-outlined">forward_10</span>
+           <i class="material-symbols-outlined">forward_10</i>
+         </span
             <span class=="icon">
-           <span class="material-symbols-outlined">volume_up</span>
+           <i class="material-symbols-outlined">volume_up</i>
+     </span>
        <input type="range" min="0" max="100" id="volume_range">
               </div>
             <div class="controls-right">
