--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
             <div class="controls-right">
      <span class=="icon">
        <i class="material-symbols-outlined"></i>
+              </span>
        <span class=="icon">
          <i class="material-symbols-outlined">play_arrow</span>
           <span class=="icon">
-         <i class="material-symbols-outlined">picture_in_picture_alt</span>
+         <i class="material-symbols-outlined">picture_in_picture_alt</i>
+            </span>
          <span class=="icon">
-           <i class="material-symbols-outlined">settings</span>
+           <i class="material-symbols-outlined">settings</i>
+           </span>
          <span class=="icon">
            <i class="material-symbols-outlined">fullscreen</i>
          </span>
