--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       </div>
    <div class="controls-left">
      <span class=="icon">
-       <i class="material-symbols-outlined">replay_10</i>
+       <i class="material-icons">replay_10</i>
      </span>
        <span class=="icon">
-         <i class="material-symbols-outlined">play_arrow</i>
+         <i class="material-icons">play_arrow</i>
          </span
          <span class=="icon">
-           <i class="material-symbols-outlined">forward_10</i>
+           <i class="material-icons">forward_10</i>
          </span
             <span class=="icon">
            <i class="material-symbols-outlined">volume_up</i>
@@ -36,25 +36,26 @@
               </div>
             <div class="controls-right">
      <span class=="icon">
-       <i class="material-symbols-outlined"></i>
+       <i class="material-icons"></i>
               </span>
        <span class=="icon">
-         <i class="material-symbols-outlined">play_arrow</span>
+         <i class="material-icons auto play"></i>
+              </span>
           <span class=="icon">
-         <i class="material-symbols-outlined">picture_in_picture_alt</i>
+         <i class="material-icons">picture_in_picture_alt</i>
             </span>
          <span class=="icon">
-           <i class="material-symbols-outlined">settings</i>
+           <i class="material-icons">settings</i>
            </span>
          <span class=="icon">
-           <i class="material-symbols-outlined">fullscreen</i>
+           <i class="material-icons">fullscreen</i>
          </span>
               </div>
           </div>
         </div>
        <div class="settings">
          <div class="playback">
-           <span>playback speed</span>
+           <span>Oynatma hızı</span>
            <ul>
              <li data-speed="0.25">Çok yavaş</li>
              <li data-speed="0.5">0.5</li>
